// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sicp errors: > page not found error renders correctly 1`] = `
<DocumentFragment>
  <div
    class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
  >
    <div
      class="bp6-non-ideal-state-visual"
      style="font-size: 48px; line-height: 48px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-error bp6-icon-muted"
        tabindex="-1"
      >
        <svg
          data-icon="error"
          height="48"
          role="img"
          viewBox="0 0 20 20"
          width="48"
        >
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="bp6-non-ideal-state-text"
    >
      <h4
        class="bp6-heading"
      >
        Something went wrong :(
      </h4>
      <div
        data-testid="sicp-page-not-found-error"
      >
        We could not find the page you were looking for. Please check the URL again. If you believe the URL is correct, kindly let us know by filing an issue at 
        <a
          href="https://github.com/source-academy/frontend"
        >
          https://github.com/source-academy/frontend
        </a>
        .
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sicp errors: > unexpected error renders correctly 1`] = `
<DocumentFragment>
  <div
    class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
  >
    <div
      class="bp6-non-ideal-state-visual"
      style="font-size: 48px; line-height: 48px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-error bp6-icon-muted"
        tabindex="-1"
      >
        <svg
          data-icon="error"
          height="48"
          role="img"
          viewBox="0 0 20 20"
          width="48"
        >
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="bp6-non-ideal-state-text"
    >
      <h4
        class="bp6-heading"
      >
        Something went wrong :(
      </h4>
      <div
        data-testid="sicp-unexpected-error"
      >
        Something unexpected went wrong trying to load this page. Please try refreshing the page. If the issue persists, kindly let us know by filing an issue at 
        <a
          href="https://github.com/source-academy/frontend"
        >
          https://github.com/source-academy/frontend
        </a>
        .
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Sicp errors: > unexpected error renders correctly 2`] = `
<DocumentFragment>
  <div
    class="bp6-non-ideal-state bp6-non-ideal-state-vertical"
  >
    <div
      class="bp6-non-ideal-state-visual"
      style="font-size: 48px; line-height: 48px;"
    >
      <span
        aria-hidden="true"
        class="bp6-icon bp6-icon-error bp6-icon-muted"
        tabindex="-1"
      >
        <svg
          data-icon="error"
          height="48"
          role="img"
          viewBox="0 0 20 20"
          width="48"
        >
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </div>
    <div
      class="bp6-non-ideal-state-text"
    >
      <h4
        class="bp6-heading"
      >
        Something went wrong :(
      </h4>
      <div
        data-testid="sicp-parsing-error"
      >
        An error occured while loading the page. Kindly let us know by filing an issue at 
        <a
          href="https://github.com/source-academy/frontend"
        >
          https://github.com/source-academy/frontend
        </a>
         and we will get it fixed as soon as possible.
      </div>
    </div>
  </div>
</DocumentFragment>
`;
